# comp1100-assignments

./: README.md
Assignment1/: README.md  comp1100-assignment1.cabal
Assignment1/app/: Main.hs
Assignment1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Assignment1/dist-newstyle/packagedb/ghc-8.6.5/: comp1100-assignment1-0.1.0.0-inplace.conf  package.cache
Assignment1/dist-newstyle/tmp/src-80416/lens-4.19.2/: lens.cabal
Assignment1/src/: Controller.hs  Model.hs  View.hs
Assignment1/test/: ShapesTest.hs  Testing.hs
assignment2/: .ghcid  README.md  comp1100-assignment2.cabal
assignment2/src/: App.hs  Farm.hs  FarmTest.hs  GridRenderer.hs  TestPatterns.hs  Testing.hs
assignment2/test/: Main.hs
assignment3/: README.md  comp1100-assignment3.cabal  tournament_config.txt
assignment3/src/: AI.hs  AITests.hs  ConsecutiveDots.hs  ConsecutiveDotsTests.hs  Testing.hs
assignment3/src/Dragons/: ConsecutiveDots.hs  Game.hs  Main.hs  Options.hs  TestMain.hs
assignment3/src/Dragons/ConsecutiveDots/: CodeWorld.hs  Text.hs
assignment3/src/Dragons/Game/UI/: CodeWorld.hs  Json.hs  Text.hs
