name:                comp1100-assignment2
synopsis:            COMP1100 Assignment 2 - Cellular Automata
version:             0.1.0.0
homepage:            https://cs.anu.edu.au/courses/comp1100
license:             AllRightsReserved
author:              COMP1100/1130 Team
maintainer:          comp1100@anu.edu.au
copyright:           2022 The Australian National University
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     App
                     , Farm
                     , FarmTest
                     , GridRenderer
                     , TestPatterns
                     , Testing
  build-depends:       base >= 4.8 && < 5
                     , reflex >= 0.6.3 && < 0.6.4
                     , codeworld-api >= 0.6.0 && < 0.7
                     , text >= 1.2 && < 1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable farmworld
  main-is:             Main.hs
  build-depends:       base
                     , comp1100-assignment2
  hs-source-dirs:      app
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

test-suite automata-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , comp1100-assignment2
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010